# s3-mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  dockerfile  env.py  main.py  mcp-claude-log.code-workspace  pyproject.toml
.github/workflows/: ci.yml
scripts/: commands.py
